--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <div class='divBody'>
         <section id="SectionHome" class="SectionHome"> 
-            <p>Seja bem vindo ao Ecomerce do Cássio</p>
+            <p>Seja bem vindo ao E-commerce do Cássio</p>
         </section>
         <section id="SectionServico" class="SectionServico">     
             <p>Aqui oferecemos os melhores produtos e serviços para sua empresa</p>
